# Kibitz

./: .gitignore  .mcp.json  Kibitz.bat  Kibitz.command  LICENSE  README.md  START HERE.txt  Tintin's AI Chess Analysis.bat  Tintin's AI Chess Analysis.command  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release-app.yml  traffic-stats.yml
docs/: index.html  style.css
frontend/: index.html  loading.html  main.js  styles.css
scripts/: apply_update.py  build_app.sh  collect_traffic_stats.py  download_stockfish.py  run_web.py  test.sh
server/: claude_bridge.py  config.py  mcp_server.py
server/core/: analysis_cache.py  app_liveness.py  backups.py  chat_store.py  chesscom.py  evaluation.py  game_analysis.py  history.py  lichess_study.py  lifecycle.py  puzzles.py  reviews.py  session.py  settings.py  srs.py  triage.py  updates.py
server/web/: app.py  routes_backup.py  routes_board.py  routes_chat.py  routes_history.py  routes_settings.py  routes_updates.py  runner.py
tests/: conftest.py  test_app_liveness.py  test_apply_update.py  test_backups.py  test_chesscom.py  test_coach_facts.py  test_evaluation.py  test_game_analysis.py  test_insights.py  test_lichess.py  test_multipgn.py  test_openings.py  test_precompute.py  test_puzzle_chat.py  test_puzzles.py  test_reviews.py  test_settings.py  test_srs.py  test_tablebase.py  test_triage.py  test_updates.py  test_web_frontend.py
