[project]
name = "chess-review-mcp"
version = "2.0.0"
description = "Kibitz - a local AI chess tutor: PGN -> Stockfish analysis -> mistakes explained in words, on the web board or from Claude Code via MCP."
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dmitri Demler" }]
dependencies = [
    "python-chess>=1.999",
    "mcp[cli]>=1.27",
    "fastapi>=0.137",
    "uvicorn>=0.49",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

# Recommended setup for users is uv (see ./install.sh): `uv sync` builds the env and
# downloads a compatible Python automatically; `uv run python -m server.mcp_server`
# runs the server. Add test deps with `uv sync --extra dev`.
#
# This developer machine also has a conda env at
#   /opt/miniconda3/envs/chess-review/bin/python
# which still works; either interpreter is fine.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

# The no-build frontend lives at the repo root (a sibling of `server/`), so a plain wheel install
# (what `uv run` does for the MCP server) would NOT ship it — the board would serve the API but
# 404 at `/`. Force it into the package as `server/_frontend/` so an installed wheel always has the
# UI; `server.web.app` resolves that location first and falls back to the repo `frontend/` for
# source/editable runs.
[tool.hatch.build.targets.wheel.force-include]
"frontend" = "server/_frontend"
